[tool.poetry]
name = "reportcreator-api"
version = "0.1.0"
description = "Pentest report creator"
authors = []
packages = [{include = "reportcreator_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
django = { extras = ["argon2"], version = "~5.1" }
djangorestframework = "~3.15.0"
weasyprint = "~63.1"

django-phonenumber-field = { version = "^8.0.0", extras = ["phonenumberslite"] }
django-csp = "^4.0b2"
django-storages = "^1.13.2"
drf-nested-routers = "^0.94.1"
django-filter = "^24.1"
drf-spectacular = { extras = ["sidecar"], version = "^0.28.0" }
django-simple-history = "^3.5.0"
adrf = "^0.1.6"

psycopg = { extras = ["binary", "pool"], version = "^3.1.8" }
gunicorn = "^23.0.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
whitenoise = "^6.4.0"
brotli = "^1.0.9"
channels = { "extras" = ["daphne"], version = "^4.1.0" }
channels-redis = "^4.2.0"


requests = "^2.28.2"
httpx = "^0.28.0"
tenacity = "^9.0.0"
regex = "^2024.5.10"
jsonschema = "^4.17.3"
python-decouple = "^3.8"
pycryptodomex = "^3.17"
pyotp = "^2.8.0"
qrcode = { extras = ["pil"], version = "^8.0" }
fido2 = "^1.1.1"
authlib = "^1.3.0"
python-gnupg = "^0.5.0"
frozendict = "^2.3.8"

lorem-text = "^2.1"
randomcolor = "^0.4.4.6"
zipstream-ng = "^1.6.0"
boto3 = "^1.26.5"
playwright = "^1.32.1"
pikepdf = "^9.0.0"
celery = "^5.3.6"

django-debug-toolbar = "^4.4.5"
debugpy = "^1.6.7"
watchdog = "^6.0.0"
pytest-django = "^4.5.2"
pytest-asyncio = "^0.25.0"
pytest-xdist = "^3.2.1"
pytest-cov = "^6.0.0"
elastic-apm = "^6.20.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "W", "I", "UP", "ASYNC", "COM", "T10", "T20", "INP", "PIE",  # misc rules
  "S",  # bandit SAST
  "B",  # bugbear rules
  "DJ",  # django rules
  "PT",  # pytest rules
]
ignore = [
  "E741",  # Ambiguous variable name: `l`
  "DJ001",  # Avoid using null=True on string-based fields in django models
  "S101",  # Use of `assert` detected
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = true