[project]
name = "sysreptor-api"
version = "0.1.0"
description = "SysReptor API"
authors = []
requires-python = ">=3.12,<4.0"

dependencies = [
  "django[argon2] (>=6.0,<6.1)",
  "djangorestframework (>=3.16,<3.17)",
  "weasyprint (==68.0)",

  "django-storages[s3] (~=1.13)",
  "drf-nested-routers (~=0.95)",
  "django-filter (~=25.1)",
  "drf-spectacular[sidecar] (~=0.29)",
  "django-simple-history (~=3.5)",
  "adrf (~=0.1)",

  "psycopg[binary,pool] (~=3.1)",
  "gunicorn (~=25.0)",
  "uvicorn[standard] (~=0.40)",
  "uvicorn-worker (~=0.4)",
  "whitenoise (~=6.4)",
  "channels[daphne] (~=4.2)",
  "channels-redis (~=4.2)",

  "requests (~=2.28)",
  "httpx (~=0.28)",
  "tenacity (~=9.0)",
  "regex (~=2026.1)",
  "jsonschema (~=4.17)",
  "python-decouple (~=3.8)",
  "pycryptodomex (~=3.17)",
  "pyotp (~=2.8)",
  "qrcode[pil] (~=8.0)",
  "fido2 (~=2.0)",
  "authlib (~=1.3)",
  "python-gnupg (~=0.5)",
  "frozendict (~=2.3)",

  "lorem-text (~=3.0)",
  "randomcolor (~=0.4)",
  "zipstream-ng (~=1.6)",
  "playwright (~=1.53)",
  "pikepdf (~=10.0)",
  "celery (~=5.3)",
  "psutil (~=7.0)",
  "markdownify (~=1.2)",
  "langchain[anthropic,openai,deepseek,ollama,mistralai] (~=1.0)",

  "django-debug-toolbar (~=6.0)",
  "elastic-apm (~=6.20)",
  "debugpy (~=1.6)",
  "watchdog (~=6.0)",
  "pytest-django (~=4.11)",
  "pytest-asyncio (~=1.2)",
  "pytest-xdist (~=3.2)",
  "pytest-cov (~=7.0)",

  "pip-licenses-cli (~=3.0)",
  "ruff (~=0.15)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "W", "I", "UP", "ASYNC", "COM", "T10", "T20", "INP", "PIE",  # misc rules
  "S",  # bandit SAST
  "B",  # bugbear rules
  "DJ",  # django rules
  "PT",  # pytest rules
]
ignore = [
  "E741",  # Ambiguous variable name: `l`
  "DJ001",  # Avoid using null=True on string-based fields in django models
  "S101",  # Use of `assert` detected
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = true